style: styled pages with some css

--- a/views/page_a.html
+++ b/views/page_a.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Page A</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <h1>Page A</h1>
-    <p>Visit count: <?= $page_visits ?></p>
-    <a href="b.php">Go to B</a><br>
-    <a href="c.php">Go to C</a><br>
-    <a href="logout.php">Logout</a>
+    <div class="container">
+        <h1>Page A</h1>
+        <p>Visit count: <?= $page_visits ?></p>
+        <a href="b.php">Go to B</a><br>
+        <a href="c.php">Go to C</a><br>
+        <a class="logout-link" href="logout.php">Logout</a>
+    </div>
 </body>
 </html>
